--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "acorn": "^7.1.0",
     "bluebird": "^3.7.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "eslint": "^6.8.0",
     "express": "~4.16.1",
-    "express-validator": "^6.3.0",
+    "express-validator": "^6.3.1",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
