--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "pg-monitor": "^1.3.1",
     "pg-promise": "^10.3.1",
     "pug": "^2.0.4",
     "standard": "^14.3.1",
