--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "eslint": "^6.8.0",
     "express": "~4.16.1",
     "express-validator": "^6.3.1",
+    "express-winston": "^4.0.2",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
-    "morgan": "~1.9.1",
     "pg-monitor": "^1.3.1",
     "pg-promise": "^10.3.1",
     "pug": "^2.0.4",
+    "rfs": "^9.0.2",
+    "rotating-file-stream": "^2.0.1",
     "standard": "^14.3.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1"
   }
 }
