--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "pg-monitor": "^1.3.1",
     "pg-promise": "^10.3.1",
     "pug": "^2.0.4",
